# IL_based_RL

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
demos/: pendulum.npz  pendulum_expert.npz
scripts/: run_pipeline.py
src/il_based_rl/: __init__.py  __main__.py  actor_critic_policy.py  agent.py  buffer.py  collect.py  dataset.py  evaluate.py  policy.py  ppo_agent.py  train.py  train_ppo.py
src/il_based_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_actor_critic_policy.py  test_agent.py  test_buffer.py  test_dataset.py  test_policy.py  test_ppo_agent.py
